# glue-starter-kit

./: .cookiecutter.yaml  .editorconfig  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.bin/: glue-pytest.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.envs/: .aws
docker/app/: .bash_aliases  Dockerfile
docker/localstack/docker-entrypoint-initaws.d/: 001_init.sh
docs/TIPS/: Glue.md
fixtures/: make_fixture.py
fixtures/data/it/: person.csv
fixtures/it/: person.csv
job/: glue_starter_kit.json
src/: __init__.py  app.py  sample.py
src/glue_starter_kit/: __init__.py  app.py  sample.py
tests/: app_test.py  sample_test.py
tests/glue_starter_kit/: app_test.py  make_fixture.py
